# packaging_legacy

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
packaging_legacy/: version.py
tests/: test_version.py
